--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://unow0517.github.io/SustainableCommunity/"
+  "homepage": "https://unow0517.github.io/SustainableCommunity"
 }
