--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -39,5 +38,9 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://unow0517.github.io/SustainableCommunity"
+  "homepage": "https://unow0517.github.io/SustainableCommunity",
+  "devDependencies": {
+    "-": "0.0.1",
+    "gh-pages": "^3.1.0"
+  }
 }
